# openfstwin

./: .gitignore  CMakeLists.txt  README.md  patchset-1.4.1.patch
MSVC15/algo_test/: algo_test.vcxproj
MSVC15/farcompilestrings/: farcompilestrings.vcxproj
MSVC15/farcreate/: farcreate.vcxproj
MSVC15/farextract/: farextract.vcxproj
MSVC15/farinfo/: farinfo.vcxproj
MSVC15/farprintstrings/: farprintstrings.vcxproj
MSVC15/fst_test/: fst_test.vcxproj
MSVC15/fstarcsort/: fstarcsort.vcxproj
MSVC15/fstclosure/: fstclosure.vcxproj
MSVC15/fstcompile/: fstcompile.vcxproj
MSVC15/fstcompose/: fstcompose.vcxproj
MSVC15/fstconcat/: fstconcat.vcxproj
MSVC15/fstconnect/: fstconnect.vcxproj
MSVC15/fstconvert/: fstconvert.vcxproj
MSVC15/fstdeterminize/: fstdeterminize.vcxproj
MSVC15/fstdifference/: fstdifference.vcxproj
MSVC15/fstdisambiguate/: fstdisambiguate.vcxproj
MSVC15/fstdraw/: fstdraw.vcxproj
MSVC15/fstencode/: fstencode.vcxproj
MSVC15/fstepsnormalize/: fstepsnormalize.vcxproj
MSVC15/fstequal/: fstequal.vcxproj
MSVC15/fstequivalent/: fstequivalent.vcxproj
MSVC15/fstinfo/: fstinfo.vcxproj
MSVC15/fstintersect/: fstintersect.vcxproj
MSVC15/fstinvert/: fstinvert.vcxproj
MSVC15/fstlinear/: fstlinear.vcxproj
MSVC15/fstloglinearapply/: fstloglinearapply.vcxproj
MSVC15/fstmap/: fstmap.vcxproj
MSVC15/fstminimize/: fstminimize.vcxproj
MSVC15/fstprint/: fstprint.vcxproj
MSVC15/fstproject/: fstproject.vcxproj
MSVC15/fstprune/: fstprune.vcxproj
MSVC15/fstpush/: fstpush.vcxproj
MSVC15/fstrandgen/: fstrandgen.vcxproj
MSVC15/fstrelabel/: fstrelabel.vcxproj
src/lib/: CMakeLists.txt  (+2 more)
src/test/: CMakeLists.txt
(+61 files in other folders)
